# lib-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
chat_messages/: admin.py  models.py  serializers.py  urls.py  views.py
chat_messages/migrations/: 0001_initial.py  0002_alter_message_options.py  0003_alter_message_options_message_response.py
config/: asgi.py  urls.py
